--- a/index.html
+++ b/index.html
@@ -58,5 +58,8 @@
         </div>
     </div>
 
+    <!-- importing gamers.js -->
+    <script type="text/javascript" src="js/gamers.js"></script>
+
 </body>
 </html>
