working on routes

--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
         </div>
     </div>
 
+    <!-- this allows ajax calls to be made -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- importing gamers.js -->
     <script type="text/javascript" src="js/gamers.js"></script>
+    
 
 </body>
 </html>
