--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
                       <div class="card-body">
                         <input type="username" class="form-control" id="username-input" placeholder="Enter Username/Gamertag">
                       </div>
+                      <button class="btn btn-outline-dark btn-lg enter-button">
+                        Enter</button>
                     </div>
             </div>
 
@@ -70,7 +72,9 @@
 
     <!-- importing gamers.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js'></script>
     <script type="text/javascript" src="js/gamers.js"></script>
+
 
 </body>
 </html>
