--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,15 @@
                     <div class="form-group">
                       <label for="exampleUsername1"><h3 class="card-header"> Enter Competitors Here</h3></label>
                       <div class="card-body">
-                        <input type="username" class="form-control" id="username-input" placeholder="Enter Username/Gamertag">
+                        <input type="username" class="form-control" id="username-input" placeholder="Enter Username">
                       </div>
+                      <div class="card-body">
+                        <input type="gamer-number" class="form-control" id="username-input" placeholder="Enter BattleTag #">
+                      </div>
+                      <button class="btn btn-outline-dark btn-lg enter-button">
+                        Enter</button>
                     </div>
             </div>
-
         </div>
 
         <br>
@@ -70,7 +74,9 @@
 
     <!-- importing gamers.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js'></script>
     <script type="text/javascript" src="js/gamers.js"></script>
+
 
 </body>
 </html>
