--- a/public/index.html
+++ b/public/index.html
@@ -22,15 +22,14 @@
             <div id="enter-names" class="card">
                 <form class="username-gamertag">
                     <div class="form-group">
-                      <label for="exampleUsername1"><h3 class="card-header"> Enter Competitors Here</h3></label>
+                      <label for="exampleUsername1"><h3 class="card-header">Enter Competitors Here</h3></label>
                       <div class="card-body">
                         <input type="username" class="form-control" id="username-input" placeholder="Enter Username">
                       </div>
                       <div class="card-body">
                         <input type="gamer-number" class="form-control" id="username-input" placeholder="Enter BattleTag #">
                       </div>
-                      <button class="btn btn-outline-dark btn-lg enter-button">
-                        Enter</button>
+                      <button class="btn btn-outline-dark btn-lg enter-button">Enter</button>
                     </div>
             </div>
         </div>
@@ -71,6 +70,10 @@
             </div>   
         </div>
     </div>
+
+    <a class="btn btn-outline-dark btn-lg" id="begin-button" href="./welcome.html" role="button">Back to Rules</a>
+    <a class="btn btn-outline-dark btn-lg" id="begin-button" href="./results.html" role="button">Results</a>
+
 
     <!-- importing gamers.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
