Pushing results.html

--- a/public/index.html
+++ b/public/index.html
@@ -22,14 +22,15 @@
             <div id="enter-names" class="card">
                 <form class="username-gamertag">
                     <div class="form-group">
-                      <label for="exampleUsername1"><h3 class="card-header">Enter Competitors Here</h3></label>
+                      <label for="exampleUsername1"><h3 class="card-header"> Enter Competitors Here</h3></label>
                       <div class="card-body">
                         <input type="username" class="form-control" id="username-input" placeholder="Enter Username">
                       </div>
                       <div class="card-body">
                         <input type="gamer-number" class="form-control" id="username-input" placeholder="Enter BattleTag #">
                       </div>
-                      <button class="btn btn-outline-dark btn-lg enter-button">Enter</button>
+                      <button class="btn btn-outline-dark btn-lg enter-button">
+                        Enter</button>
                     </div>
             </div>
         </div>
