Pushing results.html

--- a/public/index.html
+++ b/public/index.html
@@ -70,8 +70,12 @@
             </div>   
         </div>
     </div>
-         <!-- bar chart canvas element -->
-         <canvas id="overData" width="600" height="400"></canvas>
+    
+    <a class="btn btn-outline-dark btn-lg" id="begin-button" href="./welcome.html" role="button">Back to Rules</a>
+    <a class="btn btn-outline-dark btn-lg" id="begin-button" href="./results.html" role="button">Results</a>
+
+    <!-- bar chart canvas element -->
+    <canvas id="overData" width="600" height="400"></canvas>
     <!-- importing gamers.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     
