--- a/public/results.html
+++ b/public/results.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OverSTATS Olympics</title>
+    <title>The OverSTATS Olympics</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js'></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1>Well Done, Gamers, Now Behold Your Stats.</h1>
+        <h1>Time for the Awards Ceremony! Congratulations!!</h1>
     </header>
 
     <div class="container1">
@@ -22,10 +22,12 @@
     
 
 
-    <button class="btn btn-outline-dark btn-lg results-button"> Click for results! </button>
-    <a class="btn btn-outline-dark btn-lg" id="begin-button" href="./welcome.html" role="button">Back to Rules</a>
-    <a class="btn btn-outline-dark btn-lg" id="begin-button" href="./index.html" role="button">Back to Coliseum</a> 
-    
+    <div class="buttonHolder">
+        <a class="btn btn-outline-dark btn-lg" id="rules-button" href="./welcome.html" role="button">Back to Rules</a>
+        <button class="btn btn-outline-dark btn-lg results-button"> Click for results! </button>
+        <a class="btn btn-outline-dark btn-lg" id="coliseum-button" href="./index.html" role="button">Back to Coliseum</a> 
+    </div>
+
     <script type="text/javascript" src="js/gamers.js"></script>
 </body>
 </html>
