--- a/public/welcome.html
+++ b/public/welcome.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OverSTATS Olympics</title>
+    <title>The OverSTATS Olympics</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
     <header>
-        <h1>OverSTATS Olympics</h1>
+        <h1>The OverSTATS Olympics</h1>
     </header>
 
     <div class="container1">
         <div class="jumbotron jumbotron-fluid">
-            <div class="container">
+            <div class="container5">
               <h1 class="display-4">Welcome to the Coliseum!</h1>
               <img src="https://www.logolynx.com/images/logolynx/02/02842e50aa869cf0c7476ea87acfc07b.png" alt="Overwatch Symbol">
             </div>
@@ -24,26 +24,31 @@
         <div class="row">
             <div class="container2">
                 <div class="col-md-12 col-md-offset-6">
-                    <p>Gamers, before you lies the chance for glory; however, nothing so grand ever come so easily. Upon entering the Coliseum, you will test your mettle against fellow Gladiators in competitions spanning multiple matches and different challenges in a video game of your choosing. Whether your opponents be friends or foes matters not, as once a competition ends there can be only one standing at the peak.</p>
-                    <p>Invite your friends for competitions of skill or face down rivals in one-on-ones, regardless of the systems (PC, Playstation, Xbox) a competitor uses, by entering their username into the competitor list.</p>
+                    <p>Welcome Olympians!! Before you lies your chance for honor and glory within the Coliseum, where you will be able to test your mettle against fellow competitors/rivals in competitions spanning multiple matches and different challenges all revolving around the game: "Overwatch!"</p>
+                    <p>Whether your opponents be friends or foes matters not, as once a competition ends there can be only one standing at the peak!</p>
+                    <p>Invite your friends for competitions of skill or face down rivals in one-on-ones by entering their usernames into the competitor list.</p>
                     <p>Upon deciding how many matches the competition will cover (1, 3, or 5 matches), the battle mode must be determined so the Coliseum may pull the relevant data from each competitor to crown the victor.</p>
                 </div>
             </div>
             <div class="container3">
                 <div class="col-md-12 col-md-offset-6">
                     <ul> Battle Modes:
-                        <li>High Score Hero: The Coliseum tallies the scores of each Gladiator, the winner being the Gladiator with the highest total score.</li>
-                        <li>King of the Kills: Points nor deaths matter not here, only how many foes you defeat does. The Gladiator with the highest number of kills claims the crown.</li>
-                        <li>K/D Clash: The truest test of skill for any Gladiator, can you defeat more enemies than can defeat you? The Coliseum averages a Gladiator's K/D over each match, yet only the Gladiator with the best K/D average will stand the victor.</li>
+                        <hr>
+                        <li>High Score Hero: The Coliseum tallies the scores of each Olympian, the winner being the Olympian with the highest overall.</li>
+                        <br>
+                        <li>King of the Kills: Points nor deaths matter not here, only how many foes you defeat does. The Olympian with the highest number of kills claims the crown.</li>
+                        <br>
+                        <li>K/D Clash: The truest test of skill for any Olympian, can you defeat more enemies than can defeat you? The Coliseum averages a Olympian's K/D over each match, yet only the Olympian with the best K/D average will stand the victor.</li>
                     </ul>
-            </div>
+                </div>
             </div>
         </div>
     </div>
 
     <br>
-    <a class="btn btn-outline-dark btn-lg" id="begin-button" href="./index.html" role="button">Enter the Coliseum</a>
-
+    <div class="buttonHolder">
+        <a class="btn btn-outline-dark btn-lg" id="coliseum-button" href="./index.html" role="button">Enter the Coliseum</a>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
