Update to the HTML & CSS

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -10,37 +10,25 @@
 </head>
 <body>
     <header>
-        <h1>The OverSTATS Olympics</h1>
+        <h1 class="header-1">The OverSTATS Olympics</h1>
     </header>
 
     <div class="container1">
         <div class="jumbotron jumbotron-fluid">
-            <div class="container5">
-              <h1 class="display-4">Welcome to the Coliseum!</h1>
-              <img src="https://www.logolynx.com/images/logolynx/02/02842e50aa869cf0c7476ea87acfc07b.png" alt="Overwatch Symbol">
+            <div class="container6">
+                <h1 class="display-2">Welcome, Overwatch Olympians!!</h1>
+                <img src="https://www.logolynx.com/images/logolynx/02/02842e50aa869cf0c7476ea87acfc07b.png" alt="Overwatch Symbol">
             </div>
-          </div>
+        </div>
+
         <br>
+        
         <div class="row">
             <div class="container2">
-                <div class="col-md-12 col-md-offset-6">
-                    <p>Welcome Olympians!! Before you lies your chance for honor and glory within the Coliseum, where you will be able to test your mettle against fellow competitors/rivals in competitions spanning multiple matches and different challenges all revolving around the game: "Overwatch!"</p>
-                    <p>Whether your opponents be friends or foes matters not, as once a competition ends there can be only one standing at the peak!</p>
-                    <p>Invite your friends for competitions of skill or face down rivals in one-on-ones by entering their usernames into the competitor list.</p>
-                    <p>Upon deciding how many matches the competition will cover (1, 3, or 5 matches), the battle mode must be determined so the Coliseum may pull the relevant data from each competitor to crown the victor.</p>
-                </div>
-            </div>
-            <div class="container3">
-                <div class="col-md-12 col-md-offset-6">
-                    <ul> Battle Modes:
-                        <hr>
-                        <li>High Score Hero: The Coliseum tallies the scores of each Olympian, the winner being the Olympian with the highest overall.</li>
-                        <br>
-                        <li>King of the Kills: Points nor deaths matter not here, only how many foes you defeat does. The Olympian with the highest number of kills claims the crown.</li>
-                        <br>
-                        <li>K/D Clash: The truest test of skill for any Olympian, can you defeat more enemies than can defeat you? The Coliseum averages a Olympian's K/D over each match, yet only the Olympian with the best K/D average will stand the victor.</li>
-                    </ul>
-                </div>
+                <p>Before you lies you chance for honor and glory within the Coliseum where you will be able to test your mettle against fellow competitors in contests spanning mutliple matches as you strive for victory!</p>
+                <p>You can invite up to five of your friends for trials of skill or face down against rivals in one-on-ones, all by entering their usernames into the competitor list.</p>
+                <p>After each competitor finishes their trials, the Coliseum will pull the relevant data from each Olympian and determines how many medals each have earned before crowning the victor!</p>
+                <p>But remember, whether your opponents be friends or foes matters not, as once the Olympics end, there can only be one standing at the peak!</p>
             </div>
         </div>
     </div>
