--- a/public/results.html
+++ b/public/results.html
@@ -12,20 +12,18 @@
 </head>
 <body>
     <header>
-        <h1>Time for the Awards Ceremony! Congratulations!!</h1>
+        <h1 class="header-1">Time for the Awards Ceremony! Congratulations!!</h1>
     </header>
 
     <div class="container1">
      <!-- bar chart canvas element -->
     <canvas id="overData" width="600" height="400"></canvas>   
     </div>
-    
-
 
     <div class="buttonHolder">
-        <a class="btn btn-outline-dark btn-lg" id="rules-button" href="./welcome.html" role="button">Back to Rules</a>
+        <a class="btn btn-outline-dark btn-lg" id="coliseum-button" href="./index.html" role="button">Back to the Coliseum</a>
         <button class="btn btn-outline-dark btn-lg results-button"> Click for results! </button>
-        <a class="btn btn-outline-dark btn-lg" id="coliseum-button" href="./index.html" role="button">Back to Coliseum</a> 
+        <a class="btn btn-outline-dark btn-lg" id="rules-button" href="./welcome.html" role="button">Back to Rules</a>
     </div>
 
     <script type="text/javascript" src="js/gamers.js"></script>
