added instructions to change profile data to public

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -29,6 +29,8 @@
                 <p>You can invite up to five of your friends for trials of skill or face down against rivals in one-on-ones, all by entering their usernames into the competitor list.</p>
                 <p>After each competitor finishes their trials, the Coliseum will pull the relevant data from each Olympian and determines how many medals each have earned before crowning the victor!</p>
                 <p>But remember, whether your opponents be friends or foes matters not, as once the Olympics end, there can only be one standing at the peak!</p>
+                <br>
+                <p>** Make sure your profile data is set to public. In the Overwatch menu, click on "Options", then click the "Social" tab. Scroll to "Career Profile Visibility" and change to public.</p>
             </div>
         </div>
     </div>
