--- a/public/results.html
+++ b/public/results.html
@@ -12,11 +12,12 @@
 </head>
 <body>
     <header>
-        <h1 class="header-1">Time for the Awards Ceremony! Congratulations!!</h1>
+        <h1>Time for the Awards Ceremony! Congratulations!!</h1>
     </header>
 
+        
     <div class="container1">
-     <!-- bar chart canvas element -->
+    <!-- bar chart canvas element -->
     <canvas id="overData" width="600" height="400"></canvas>   
     </div>
 
@@ -26,6 +27,14 @@
         <a class="btn btn-outline-dark btn-lg" id="rules-button" href="./welcome.html" role="button">Back to Rules</a>
     </div>
 
+    <br>
+
+    <hr>
+
+    <footer>
+        <h4>** This website is a educational group-project made by web development students. The developers do not own any of the trademarked & copyrighted material. **</h4>
+    </footer>
+        
     <script type="text/javascript" src="js/gamers.js"></script>
 </body>
 </html>
