Added troubleshooting tip for results

--- a/public/results.html
+++ b/public/results.html
@@ -21,15 +21,25 @@
     <canvas id="overData" width="600" height="400"></canvas>   
     </div>
 
+    <div class="container5">
+        <p>IMPORTANT NOTICE!!</p>
+        <p>If you press "Click for Results" immediately after your group finishes a match and your medals haven't updated, do not worry. Results may require a short wait as the game updates the database with your stats.</p>
+        <p>If your results have not updated within 2 minutes, exit the game and wait 2 more minutes. Your results will have updated in the database with your requested results next.</p>
+    </div>
+
+    <br>
+
     <div class="buttonHolder">
         <a class="btn btn-outline-dark btn-lg" id="coliseum-button" href="./index.html" role="button">Back to the Coliseum</a>
-        <button class="btn btn-outline-dark btn-lg results-button"> Click for results! </button>
+        <button class="btn btn-outline-dark btn-lg results-button"> Click for Results! </button>
         <a class="btn btn-outline-dark btn-lg" id="rules-button" href="./welcome.html" role="button">Back to Rules</a>
     </div>
 
     <br>
 
     <hr>
+
+    <br>
 
     <footer>
         <h4>** This website is a educational group-project made by web development students. The developers do not own any of the trademarked & copyrighted material. **</h4>
