--- a/public/welcome.html
+++ b/public/welcome.html
@@ -31,7 +31,7 @@
                 <p>After each competitor finishes their trials, the Coliseum will pull the relevant data from each Olympian and determines how many medals each have earned before crowning the victor!</p>
                 <p>But remember, whether your opponents be friends or foes matters not, as once the Olympics end, there can only be one standing at the peak!</p>
                 <br>
-                <p>** Make sure your profile data is set to public. In the Overwatch menu, click on "Options", then click the "Social" tab. Scroll to "Career Profile Visibility" and change to public.</p>
+                <p>** Make sure your profile data is set to public. In the Overwatch menu, click on "Options", then click the "Social" tab. Scroll to "Career Profile Visibility" and change to public. **</p>
             </div>
         </div>
     </div>
