readme updaet, gamers.js cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
             <h3>Enter Competitor Username Below</h3>
 
             <div class="input-group">
-                <input type="username" class="form-control" id="username-input" placeholder="Enter Username/Gamertag"><span class="btn btn-outline-dark btn-md enter-button">Enter</span>
+                <input type="username" onfocus="this.value=''" class="form-control" id="username-input" placeholder="Enter Username/Gamertag (username#1234)"><span class="btn btn-outline-dark btn-md enter-button">Enter</span>
             </div>
         </div>
             
