added 'reset comp' function and button

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
     <div class="buttonHolder">
         <a class="btn btn-outline-dark btn-lg" id="rules-button" href="./welcome.html" role="button">Back to Rules</a>
         <a class="btn btn-outline-dark btn-lg" id="end-button" href="./results.html" role="button">Results</a>
+        <a class="btn btn-outline-dark btn-lg reset-button" id="reset-button" role="button">Reset Competition</a>
     </div>
 
     <br>
