Final touches to font sizing

--- a/public/results.html
+++ b/public/results.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1>Time for the Awards Ceremony! Congratulations!!</h1>
+        <h1>Congratulations!! <br> You've reached the Awards Ceremony!</h1>
     </header>
 
         
