--- a/public/welcome.html
+++ b/public/welcome.html
@@ -16,7 +16,7 @@
     <div class="container1">
         <div class="jumbotron jumbotron-fluid">
             <div class="container6">
-                <h5>Welcome, Overwatch Olympians!!</h>
+                <h5>Welcome,<br>Overwatch Olympians!!</h>
             </div>
             
             <img src="https://www.logolynx.com/images/logolynx/02/02842e50aa869cf0c7476ea87acfc07b.png" alt="Overwatch Symbol">
